src/test/deca/syntax/invalid/homemade/test/test_lex_inv_include_not_found.deca
// Test d'un include not found
#include "Maths.decah"